--- a/index.html
+++ b/index.html
@@ -8,13 +8,33 @@
 </head>
 <body>
     <header>
-
+        <nav>
+            <h1 class="nav-title">G3 Architects</h1>
+            <ul class="nav-iteams">
+                <li><a href=" ">Home</a></li>
+                <li><a href="">About</a></li>
+                <li><a href="">Contact Us</a></li>
+                <li><a href="">Login</a></li>
+            </ul>
+        </nav>
+        <div>
+            <div class="banner">
+                <h1 class="banner-title">Brand New Group of Architects </h1>
+                <p class="banner-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+            </div>
+            <div class="first_btn">
+                <button class="first-btn-title">Explore Me</button>
+            </div>
+            <div class="banner-picture">
+                <img src="images/banner.png" alt="">
+            </div>
+        </div>
     </header>
     <main>
 
     </main>
     <footer>
-        
+         
     </footer>
 </body>
 </html>
