--- a/index.html
+++ b/index.html
@@ -31,7 +31,23 @@
         </div>
     </header>
     <main>
-
+        <section>
+            <div class="Features-conteiner">
+                <div class="img-content">
+                    <img src="images/team1.png" alt="">
+                    <img src="images/team2.png" alt="">
+                    <img src="images/team3.png" alt="">
+                    <img src="images/team4.png" alt="">
+                </div>
+                <div class="Features-content">
+                    <h1 class="Features-title"><span class="Quick">Quick list </span> <span class="of-our">of Our</span> <span class="Features">Features</span></h1>
+                    <p class="Features-descriptions">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                    <div class="second-btn-style">
+                        <button class="second-btn">Explore Me</button>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
          
