Fact area nake and responsive

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </div>
     </header>
     <main>
-        <section>
+        <section class="feature">
             <div class="Features-conteiner">
                 <div class="img-content">
                     <img src="images/team1.png" alt="">
@@ -45,6 +45,37 @@
                     <div class="second-btn-style">
                         <button class="second-btn">Explore Me</button>
                     </div>
+                </div>
+            </div>
+        </section>
+        <section>
+
+
+        </section>
+        <!-- fact section -->
+        <section class="fact">
+            <h1 class="fact-title">Some Facts</h1>
+            <p class="fact-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+            <div class="fact-img">
+                <div class="fact-image-content">
+                    <img class="picture" src="images/icons/ribon.png" alt="">
+                    <h1 class="fact-number">54</h1>
+                    <p class="fact-message">Awards Winnings</p>    
+                </div>
+                <div class="fact-image-content">
+                    <img class="picture" src="images/icons/projects.png" alt="">
+                    <h1 class="fact1-number">1458</h1>
+                    <p class="fact-message">Project Finished</p>    
+                </div>
+                <div class="fact-image-content">
+                    <img class="picture" src="images/icons/projects.png" alt="">
+                    <h1 class="fact2-number">590</h1>
+                    <p class="fact-message">Clients Worked</p>    
+                </div>
+                <div class="fact-image-content">
+                    <img class="picture" src="images/icons/email.png " alt="">
+                    <h1 class="fact3-number">22578</h1>
+                    <p class="fact-message">Email Send</p>    
                 </div>
             </div>
         </section>
