--- a/index.html
+++ b/index.html
@@ -49,9 +49,40 @@
             </div>
         </section>
         <section>
-
-
-        </section>
+            <div class="features-and-love">
+                <div>
+                    <div class="card">
+                        <h1 class="feature-title">Features you will <br> love & enjoy</h1>
+                        <p class="feature-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                    </div>
+                    <div class="card">
+                        <h3 class="feature-content">Dexktop & Mobile Version</h3>
+                        <p class="feature-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                    </div>
+                    <div class="card">
+                        <h3 class="feature-content">Dexktop & Mobile Version</h3>
+                        <p class="feature-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                    </div>
+                    <div class="card">
+                        <h3 class="feature-content">Dexktop & Mobile Version</h3>
+                        <p class="feature-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                    </div>
+                    <div class="card">
+                        <h3 class="feature-content">Dexktop & Mobile Version</h3>
+                        <p class="feature-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                    </div>
+                </div>
+                <div class="architect-img">
+                    <img src="images/architect.png" alt="">
+                    <div class="exprience-btn">
+                        <button class="years-btn-style">
+                            <h2>10+Year</h2>
+                            <p>Experience</p>
+                        </button>
+                    </div>
+                </div>
+            </div>
+         </section>
         <!-- fact section -->
         <section class="fact">
             <h1 class="fact-title">Some Facts</h1>
@@ -81,7 +112,17 @@
         </section>
     </main>
     <footer>
-         
+         <div class="sponsor-conteiner">
+            <h1 class="sponsors-title">Our Sponspors</h1>
+            <p class="sponsor-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+         </div>
+         <div class="sponsor-content">
+            <img src="images/sponsors/spotify.png " alt="">
+            <img src="images/sponsors/amazon.png" alt="">
+            <img src="images/sponsors/google.png" alt="">
+            <img src="images/sponsors/telerama.png" alt="">
+            <img src="images/sponsors/figma.png" alt="">
+         </div>
     </footer>
 </body>
 </html>
